[gd_scene load_steps=15 format=3 uid="uid://d4eomxhoxiaj7"]

[ext_resource type="Script" uid="uid://cfspb0c1ib6lq" path="res://Scripts/enemy.gd" id="1_1f0kj"]
[ext_resource type="Texture2D" uid="uid://cytidcc5uxdux" path="res://Assets/Enemy/Walk.png" id="1_hghv2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1f0kj"]
atlas = ExtResource("1_hghv2")
region = Rect2(0, 0, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_afpow"]
atlas = ExtResource("1_hghv2")
region = Rect2(62, 0, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_287tu"]
atlas = ExtResource("1_hghv2")
region = Rect2(124, 0, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_0830c"]
atlas = ExtResource("1_hghv2")
region = Rect2(186, 0, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghaa6"]
atlas = ExtResource("1_hghv2")
region = Rect2(248, 0, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dp5w"]
atlas = ExtResource("1_hghv2")
region = Rect2(310, 0, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_auwsv"]
atlas = ExtResource("1_hghv2")
region = Rect2(372, 0, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uf12"]
atlas = ExtResource("1_hghv2")
region = Rect2(434, 0, 62, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_po0sg"]
atlas = ExtResource("1_hghv2")
region = Rect2(496, 0, 62, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_haro7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1f0kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_afpow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_287tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0830c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghaa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dp5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_auwsv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uf12")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po0sg")
}],
"loop": true,
"name": &"Walk",
"speed": 8.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hghv2"]
radius = 3.0
height = 58.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1f0kj"]
height = 62.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_1f0kj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -47)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_haro7")
animation = &"Walk"
autoplay = "Walk"
frame_progress = 0.125541

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -29)
shape = SubResource("CapsuleShape2D_hghv2")

[node name="PlayerDetectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectArea"]
position = Vector2(-1, -32)
shape = SubResource("CapsuleShape2D_1f0kj")
debug_color = Color(0.950227, 3.85046e-07, 0.569635, 0.42)

[node name="LeftRay" type="RayCast2D" parent="."]
position = Vector2(-11, -6)
target_position = Vector2(0, 25)

[node name="RightRay" type="RayCast2D" parent="."]
position = Vector2(11, -6)
target_position = Vector2(0, 25)

[node name="TurnCooldownTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="PlayerDetectArea" to="." method="_on_player_detect_area_body_entered"]
[connection signal="timeout" from="TurnCooldownTimer" to="." method="_on_turn_cooldown_timer_timeout"]
